--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = QtModernRedux
-version = 0.9.9
+version = 0.9.10
 author = Robert Kist
 author_email = kr@robertkist.com
 description = a modern UI style for Python 3.x / PySide2 applications
-long_description = file: README_pypi.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/robertkist/qtmodernredux
 classifiers =
@@ -28,3 +28,4 @@ where=src
 include=
     qtmodernredux
     qtmodernredux.*
+    README_pypi.md
