polish and bug fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = QtModernRedux
-version = 0.9.12
+name = QtModernRedux6
+version = 0.9.14
 author = Robert Kist
 author_email = kr@robertkist.com
 description = a modern UI style for Python 3.x / PySide6 applications
@@ -26,6 +26,6 @@ python_requires=
 [options.packages.find]
 where=src
 include=
-    qtmodernredux
-    qtmodernredux.*
+    qtmodernredux6
+    qtmodernredux6.*
     README_pypi.md
